style.css
/* 
    School Timetable - CSS stylesheet
    What're you doing here?
*/

/* ---------------  MAIN RULES  --------------- */

html {
    scroll-behavior: smooth;
}

::-webkit-scrollbar {
    display: none;
    scrollbar-width: none;
}

body {
    margin: 0;
    background: var(--solidColorBackground2);
    width: 100%;
    overflow-x: hidden;
}

::selection {
    background-color: transparent;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: Poppins;
    margin: 0;
}

/* -------------------- FONTS --------------------*/

/* Normal text: font-family: 'Noto Sans', sans-serif; */
/* Headings/Titles: font-family: 'Helvetica', 'Poppins', sans-serif; */

/* ---------------  ANIMATION  --------------- */

@keyframes navbarLabel {
    from {
        opacity: 0.8;
        padding: 3px 0px;
    }

    to {
        opacity: 1;
        padding: 3px 20px;
    }
}

@keyframes appTab {
    from {
        opacity: 0.3;
        scale: 0.97;
    }

    to {
        opacity: 1;
        scale: 1;
    }
}

@keyframes settingContent {
    from {
        opacity: 0.3;
    }
    to {
        opacity: 1;
    }
}

/* ---------------  VARIABLES  --------------- */

:root {
    --darkTextCol0: black;
    --darkTextCol1: rgb(10, 10, 10);
    --darkTextCol2: rgb(20, 20, 20);
    --darkTextCol3: rgb(30, 30, 30);
    --darkTextCol4: rgb(40, 40, 40);
    --lightTextCol0: white;
    --lightTextCol1: rgb(240, 240, 240);
    --lightTextCol2: rgb(230, 230, 230);
    --lightTextCol3: rgb(220, 220, 220);
    --lightTextCol4: rgb(210, 210, 210);

    --solidColorBackground1: linear-gradient(45deg,
            rgba(86, 173, 236, 0.3),
            rgba(55, 172, 255, 0.3));
    --solidColorBackground2: linear-gradient(0deg,
            rgb(129, 202, 255),
            rgb(210, 236, 255));
    --lightSolidBackground1: rgba(255, 255, 255, 1);
    --lightSolidBackground2: rgba(245, 245, 245, 1);
    --lightSolidBackground3: rgba(235, 235, 235, 1);
    --lightSolidBackground4: rgba(225, 225, 225, 1);
    --lightTransBackground1: rgba(255, 255, 255, 0.6);
    --lightTransBackground2: rgba(255, 255, 255, 0.4);
    --lightTransBackground3: rgba(255, 255, 255, 0.2);
    --lightTransBackground4: rgba(255, 255, 255, 0.1);
    --darkSolidBackground1: rgba(10, 10, 10, 1);
    --darkSolidBackground2: rgba(20, 20, 20, 1);
    --darkSolidBackground3: rgba(30, 30, 30, 1);
    --darkSolidBackground4: rgba(40, 40, 40, 1);
    --darkTransBackground1: rgba(0, 0, 0, 0.6);
    --darkTransBackground2: rgba(0, 0, 0, 0.4);
    --darkTransBackground3: rgba(0, 0, 0, 0.2);
    --darkTransBackground4: rgba(0, 0, 0, 0.1);

    --HeadingFont: "Poppins";
    --StandardTextFont: "Noto Sans";
}

/* ---------------  APP TABS  --------------- */

.appTabsShown {
    display: block;
}

.appTabsHidden {
    display: none;
}

/* ---------------  NOW TAB  --------------- */

.appTabs {
    animation: appTab 0.3s ease forwards;
}

#topNotchContainer {
    display: flex;
    flex-direction: column;
    top: 0;
    left: 0;
    position: fixed;
    width: 100%;
    height: 11vh;
    background: var(--solidColorBackground1);
    box-shadow: 0 0px 10px black;
    z-index: 2;
    color: var(--textCol3);
    text-align: center;
    border-radius: 0 0 10% 10%;
    padding: 1vh 0;
    backdrop-filter: blur(8px);
}

#topNotchFixed {
    display: flex;
    position: static;
    top: 0;
    left: 0;
    height: 12vh;
    width: 100%;
    background-color: transparent;
}

#dayDisplay {
    font-family: var(--HeadingFont);
    color: var(--darkTextCol1);
    font-weight: 500;
    font-size: 2em;
    line-height: 1.2;
}

#timeDisplay {
    font-family: var(--HeadingFont);
    color: var(--darkTextCol1);
    font-weight: 600;
    line-height: 1.1;
    font-size: 3em;
}

.greetingDisplay {
    font-weight: 600;
    margin-top: 20px;
    text-align: center;
    font-size: 1.5em;
    color: var(--darkTextCol2);
}

#schoolDisplay {
    text-align: center;
    color: var(--darkTextCol4);
    margin-bottom: 10px;
}

#yourClassBox {
    width: 92%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    margin: 10px auto 20px auto;
    padding: 5px 0;
    background-color: var(--lightTransBackground2);
    border-radius: 20px;
    /* border: solid 2px rgba(100, 100, 100, 0.7); */
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
    text-align: center;
}

#userClassroomDisplay {
    font-size: 2.3em;
    font-weight: 600;
    color: var(--darkTextCol2);
}

#userComplexDisplay {
    line-height: 0.8;
    font-weight: 400;
    font-size: 1.3em;
    font-family: var(--StandardTextFont);
    color: var(--darkTextCol3);
}

#userSubjectAndTeacher {
    font-size: 1.5em;
    font-weight: 500;
    font-family: var(--StandardTextFont);
    color: var(--darkTextCol3);
    margin: 10px 0;
}

.horizontalLine {
    width: 90%;
    display: flex;
    height: 2px;
    margin: 15px auto 15px auto;
    border-radius: 1px;
    background-color: var(--darkTransBackground2);
}

#secondaryBoxesLabel {
    text-align: center;
    font-family: var(--StandardTextFont);
    font-size: 1.4em;
    margin: 10px 0 -10px 0;
}

.matesBox {
    width: 90%;
    height: fit-content;
    background-color: var(--lightTransBackground3);
    display: block;
    /* border: solid 2px rgba(100, 100, 100, 0.7); */
    box-shadow: 0 0px 6px rgba(0, 0, 0, 0.5);
    border-radius: 20px;
    margin: 20px auto;
    padding: 5px 0;
}

.matesRoomDisplay {
    font-weight: 500;
    text-align: center;
    font-size: 2em;
    color: var(--darkTextCol2);
}

.matesBoxGrid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    padding: 0px 15px;
    color: var(--darkTextCol3);
    font-family: var(--StandardTextFont);
    font-size: 1.3em;
}

.matesClass,
.matesSubject {
    text-align: left;
}

.matesNotes,
.matesTeacher {
    text-align: right;
}

.matesBoxGrid p {
    margin: 5px 0;
    color: var(--darkTextCol3);
    font-family: var(--StandardTextFont);
    font-weight: 400;
}

#navbar {
    height: 6.5vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px 0 15px 0;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100vw;
    background-color: var(--lightSolidBackground2);
    box-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
}

.navbarBtn {
    background-color: transparent;
    width: 30%;
    margin: 10px;
    height: 100%;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    font-weight: 400;
    flex-direction: column;
    z-index: 2;
}

.navbarBtn p {
    margin: 5px 0;
    font-family: var(--StandardTextFont);
    color: var(--darkTextCol2);
    line-height: 0.7;
    font-size: 1em;
    color: var(text);
}

.material-symbols-outlined {
    color: var(--darkTextCol3);
}

.navbarBtn span {
    margin: 5px 0;
    padding: 3px 20px;
    font-weight: 400;
    border-radius: 20px;
    font-size: 1.7em;
    font-weight: 500;
}

.navbarIconActive {
    animation: navbarLabel 0.25s ease forwards;
    background-color: rgba(55, 172, 255, 0.5);
    color: hsl(205, 100%, 25%);
}

.navbarLabelActive {
    font-weight: 700;
}

#navbarFixed {
    display: block;
    position: relative;
    z-index: -1;
    bottom: 0;
    width: 100%;
    height: 9vh;
    background-color: transparent;
}

/* ---------------  SETTINGS TAB  --------------- */

input,
select {
    border-radius: 8px;
    border: solid 1px rgba(128, 128, 128, 0.7);
    background-color: var(--lightTransBackground1);
    color: var(--darkTextCol2);
    text-align: left;
    margin: 0px 10px;
    font-size: 1em;
    padding: 7px;
}

label {
    font-family: Noto Sans;
    text-align: left;
    margin: 10px 10px 2px 10px;
    color: var(--darkTextCol2);
    font-size: 1.2em;
}

#personalSettings {
    width: 92%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    margin: 10px auto 30px auto;
    padding: 5px 0;
    background-color: var(--lightTransBackground2);
    border-radius: 20px;
    /* border: solid 2px rgba(100, 100, 100, 0.7); */
    box-shadow: 0 1px 8px var(--darkTransBackground1);
}

.settingHeader {
    font-size: 1.8em;
    font-family: var(--HeadingFont);
    font-weight: 500;
    text-align: center;
    margin-top: 5px;
    margin-bottom: 5px;
    color: var(--darkTextCol2);
}

#userDataForm {
    display: flex;
    flex-direction: column;
    margin: 0px 5px 10px 5px;
}

.submitBtn {
    text-align: center;
    display: flex;
    margin: 0px 15px 10px auto;
    padding: 5px 10px;
    font-size: 20px;
    font-family: Noto Sans;
    border-radius: 15px;
    border: none;
    font-weight: 600;
    background-color: rgba(55, 144, 208, 0.5);
    /* box-shadow: 0 0 3px rgba(0, 0, 0, 0.8); */
    /* border: solid 2px var(--lightTextCol1); */
    color: var(--darkTextCol3);
    transition: 0.3s background-color ease;
}

.userDataDayAndHourContainer {
    width: 100%;
    display: flex;
    margin: 10px auto;
    justify-content: center;
}

.userDataDayAndHourContainer select {
    font-size: 1.2em;
    font-weight: 600;
    padding: 2px 7px;
    font-family: var(--StandardTextFont);
}

.submitBtn:hover {
    background-color: rgba(41, 118, 174, 0.5);
}

.userDataGrid {
    display: grid;
    grid-template-columns: 3fr 7fr;
    margin: 10px 5px;
}

.userDataGrid input,
.userDataGrid label {
    font-weight: 300;
    margin: 5px 10px;
}

.matesSettings {
    width: 92%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    margin: 10px auto;
    padding: 5px 0;
    background-color: var(--lightTransBackground2);
    border-radius: 20px;
    /* border: solid 2px rgba(100, 100, 100, 0.7); */
    box-shadow: 0 1px 8px var(--darkTransBackground1);
}

